Avoided horizontal scroll in the smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h4 {
 
 p {
   font-size: 16px;
-  text-align: center;
+
   color: #272142;
   font-family: var(--style-font-family);
 }
@@ -111,10 +111,9 @@ nav ul {
   color: #272142;
 }
 .descriptions {
-  color: #272142;
   font-size: 16px;
   font-family: var(--style-font-family);
-  text-align: justify;
+
   color: #6c757d;
   line-height: 30px;
 }
@@ -126,6 +125,7 @@ nav ul {
 }
 .content p {
   font-size: 14px;
+  text-align: start;
 }
 .strong {
   padding: 30px;
@@ -168,8 +168,7 @@ footer .social-links a:hover {
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
-    line-height: 56px;
-    text-align: center;
+    line-height: 1.5;
   }
 
   h2 {
@@ -179,13 +178,13 @@ footer .social-links a:hover {
     font-size: 24px;
   }
 
-  .content {
+  .content-descriptions {
     text-align: center;
     padding: 0;
   }
 
   .strong {
-    padding: 0;
+    padding: 10px;
     text-align: center;
   }
 }
